refactor(domain): improve Value Object validation and normalization (Gemini PR#69)
Phase 1: High Priority (Value Object 정규화)
- PermissionCode: trim된 값을 필드에 할당하여 값 정규화 보장
  - 변경 전: validateValue에서만 trim 사용, 원본 value 할당
  - 변경 후: value.trim()으로 정규화된 값 저장
  - 효과: PermissionCode.of("  code  ")와 PermissionCode.of("code")가 동등하게 처리

- RoleCode: trim된 값을 필드에 할당하여 값 정규화 보장
  - 변경 전: validateValue에서만 trim 사용, 원본 value 할당
  - 변경 후: value.trim()으로 정규화된 값 저장
  - 효과: RoleCode.of("  code  ")와 RoleCode.of("code")가 동등하게 처리

Phase 2: Medium Priority (코드 품질 개선)
- PermissionCode 유효성 검증 개선:
  - isBlank() 사용으로 코드 가독성 향상
  - Pattern 객체를 static final로 캐싱하여 성능 최적화
  - 정규식 컴파일 오버헤드 제거

- RoleCode 유효성 검증 개선:
  - isBlank() 사용으로 코드 가독성 향상
  - Pattern 객체를 static final로 캐싱하여 성능 최적화
  - 정규식 컴파일 오버헤드 제거

- Grant compact constructor 개선:
  - isBlank() 사용으로 코드 가독성 향상
  - trim() 중복 호출 제거
  - conditionExpr 처리 로직 단순화

Skipped Items (Phase 3 - 아키텍처 검토 필요):
- PermissionFixture Clock 사용: package-private 생성자 접근 문제로 Skip
- RoleFixture Clock 사용: package-private 생성자 접근 문제로 Skip
- 이유: Domain layer 아키텍처 변경 필요 (테스트 전용 public 생성자 추가 고려)